# dashboard-gen-gec3

./: .env.example  .gitignore  CLAUDE.md  Corrección.md  Nombre_unidades_y_su_código.json  PME_BACKEND_MAP.md  README.md  Tarea.md  centrales_xm_2026-03-24.json  debug-dom.json  eslint.config.js  estructura.md  index.html  package-lock.json  package.json  persistencia-generacion.md  usuarioxm_instrucciones.md  vite.config.js
deploy/: config.gec3.json  config.guajira.json  dashboard-ws.service  nginx.conf  setup.sh  update.sh
docs/: architecture.md  combo-modbus-ion8650.md  decisions.md  deployment-multi-instancia.md
fabric-meter-sink/: .env.example  .gitignore  CLAUDE.md  README.md  RESILIENCIA.md  pyproject.toml
fabric-meter-sink/deploy/: fabric-meter-sink.service  install.sh
fabric-meter-sink/prompts/D-121-sink-modbus/: E1-sink-modbus.md  E2-sink-modbus.md  E3-docs-cleanup.md  ESTADO.md  PREGUNTAS-D-121.md  _CONTEXTO-BASE.md
fabric-meter-sink/scripts/: probe_fabric.py  probe_meters.py  probe_modbus.py  probe_workspace.py
fabric-meter-sink/src/: config.py  fabric_writer.py  main.py  meter_client.py  meter_client_factory.py  meter_modbus_client.py  meter_poller.py  service.py  sign_convention.py
fabric-meter-sink/tests/: conftest.py  test_meter_client.py  test_meter_client_factory.py  test_meter_modbus_client.py  test_service.py  test_sign_convention.py
fabric-meter-sink/tests/fixtures/: ion8650_op.html
server/: EXTRACTION_BACKEND_MAP.md  SIGN_CONVENTION.md  accumulator.js  alertDispatcher.js  alerter.js  config.js  db.js  despachoscraper.js  package.json  (+14 more)
(+70 files in other folders)
