[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fabric-meter-sink"
version = "0.1.0"
description = "On-prem Python service that extracts kW values from ION8650 meters."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
    "deltalake>=0.20",
    "azure-identity>=1.15",
    "pyarrow>=15",
    "requests>=2.31",
    "truststore>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
